Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I9d70a27bb5a877a042194ad1a72ce028b69ff9b9

--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -1905,8 +1905,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play ছিষ্টেম আপডে’টৰ অনুজ্ঞাপত্ৰসমূহ"</string>
     <string name="terms_title" msgid="2071742973672326073">"চৰ্তসমূহ"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"ছিষ্টেম ৱেবভিউ লাইচেঞ্চ"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"ৱালপেপাৰ ক্ৰেডিট"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"উপগ্ৰহ চিত্ৰ যোগানকাৰী:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"হস্তকৃত"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"হাতপুথিখন ল’ড কৰাত এটা সমস্যা হৈছে৷"</string>
@@ -2057,8 +2056,7 @@
     <string name="enable_text" msgid="8570798764647110430">"সক্ষম কৰক"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"ষ্ট’ৰেজ মচক"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"আপডেইটবিলাক আঁতৰাওক"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"প্ৰতিবন্ধিত ছেটিঙৰ অনুমতি দিয়ক"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"আপুনি বাছনি কৰা কিছুমান কাৰ্যকলাপ ডিফ’ল্ট হিচাপে এই এপ্‌টোত খোল খায়।"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"আপুনি এই এপটোক ৱিজেট সৃষ্টি কৰিবলৈ আৰু সেইবিলাকৰ ডেটা চাবলৈ অনুমতি দিবলৈ বাছনি কৰিছে।"</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"কোনো ডিফ’ল্ট ছেট কৰা হোৱা নাই৷"</string>
@@ -4401,8 +4399,10 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> টা অব্যৱহৃত এপ্‌</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"ব্যৱহাৰ নকৰা এপৰ ছেটিং"</string>
-    <string name="unused_apps_switch" msgid="2979882622987847195">"এপৰ কাৰ্যকলাপ পজ কৰক"</string>
-    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"যদি ব্যৱহাৰ হোৱা নাই, তেন্তে অনুমতি আঁতৰাওক, অস্থায়ী ফাইল মচক আৰু জাননী বন্ধ কৰক"</string>
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
+    <skip />
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
+    <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"আটাইবোৰ এপ্"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"ইনষ্টল কৰা হোৱা এপসমূহ"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"তাৎক্ষণিক এপ্‌সমূহ"</string>
@@ -5058,10 +5058,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"এই ডিভাইচটো <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>ৰ দ্বাৰা পৰিচালিত।"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"অধিক জানক"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"প্ৰতিবন্ধিত ছেটিং"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"<xliff:g id="APP_NAME">%s</xliff:g>ৰ বাবে প্ৰতিবন্ধিত ছেটিঙৰ অনুমতি দিয়া হৈছে"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"আপোনাৰ নিৰাপত্তাৰ বাবে এই ছেটিংটো বৰ্তমান উপলব্ধ নহয়।"</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"বিত্তীয় সহায় প্ৰাপ্ত ডিভাইচৰ তথ্য"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"আপোনাৰ ক্ৰেডিট প্ৰদানকাৰীয়ে এই ডিভাইচটোৰ ছেটিং সলনি কৰিব পাৰে আৰু ইয়াত ছফ্টৱেৰ ইনষ্টল কৰিব পাৰে।\n\nযদি আপুনি পৰিশোধ পাহৰি যায়, আপোনাৰ ডিভাইচটো লক হৈ যাব।\n\nঅধিক জানিবলৈ আপোনাৰ ক্ৰেডিট প্ৰদানকাৰীৰ সৈতে যোগাযোগ কৰক।"</string>
@@ -5544,6 +5542,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"বন্ধ স্ক্ৰীনৰ পৰা বাহ্যিক ডিভাইচৰ বাবে নিয়ন্ত্ৰণসমূহ দেখুৱাওক"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"লক কৰি থোৱা ডিভাইচৰ পৰা নিয়ন্ত্ৰণ কৰক"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"ডিভাইচ নিয়ন্ত্ৰণ কৰা এপে অনুমতি দিলে আপোনাৰ ফ’নটো অথবা টেবলেটটো আনলক নকৰাকৈ বাহ্যিক ডিভাইচসমূহ নিয়ন্ত্ৰণ কৰক"</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"যেতিয়া উপলব্ধ হয় দ্বৈত-শাৰীৰ ঘড়ী দেখুৱাব"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"দ্বৈত-শাৰীৰ ঘড়ী"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
