--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -3374,8 +3374,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Nie opgestel nie – werkprofiel"</string>
     <string name="user_admin" msgid="4024553191395768119">"Admin"</string>
     <string name="user_you" msgid="3070562015202859996">"Jy (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Jy kan nie meer gebruikers byvoeg nie. Verwyder ’n gebruiker om ’n nuwe een by te voeg."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Net die eienaar van die tablet kan gebruikers bestuur."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Net die eienaar van die foon kan gebruikers bestuur."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Beperkte profiele kan nie rekeninge byvoeg nie"</string>
@@ -4401,11 +4400,10 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> ongebruikte programme</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> ongebruikte program</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
+    <string name="unused_apps_category" msgid="8954930958175500851">"Ongebruikte programinstellings"</string>
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
     <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
     <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"Alle programme"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Geïnstalleerde programme"</string>
@@ -5548,6 +5546,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"Wys kontroles vir eksterne toestelle op die sluitskerm"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"Beheer van geslote toestel af"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"Beheer eksterne toestelle sonder om jou foon of tablet te ontsluit as die toestelkontrolesprogram dit toelaat."</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Wys dubbellynhorlosie as dit beskikbaar is"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Dubbellynhorlosie"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5565,10 +5565,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Huurtyd verval nooit nie."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Laat skermoorleggers op Instellings toe"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Laat programme wat oor ander programme kan wys toe om Instellings-skerms te oorlê"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Laat skynmodem toe"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Laat hierdie toestel toe om skymodemdiens vir instrumenttoetse te gebruik. Moenie dit tydens normale gebruik van die foon aktiveer nie"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Media"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Speld mediaspeler vas"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Mediaspeler bly oop in Kitsinstellings om terugspeel vinnig te hervat"</string>
@@ -5654,8 +5652,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Gebruik programvasspeld"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Gebruik ontwikkelaaropsies"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Gebruik drukdiens"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Laat veelvuldige gebruikers toe"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Gebruik draadlose ontfouting"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Gebruik grafikadrywervoorkeure"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Gebruik batterybespaarder"</string>
@@ -5721,12 +5718,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Wysigers"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Handelinge (koste om te lewer)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Handelinge (basisprys)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Belonings per enkele geval"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Belonings vir totale gevaltydsduur"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Maksimum belonings per dag"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Topaktiwiteit"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Kennisgewing gesien"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Kennisgewing binne 15 minute gesien"</string>
@@ -5757,20 +5751,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Voorbeskou"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Kies \'n sluimerskerm"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Wys bykomende inligting"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Wys tyd, datum, weer, luggehalte en wolkdekkingbesonderhede op die sluimerskerm"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Nog instellings"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Kies jou sluimerskerm"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Kies wat jy op jou skerm sal sien wanneer jou tablet gedok is. Jou toestel kan meer energie gebruik wanneer ’n sluimerskerm gebruik word."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Pasmaak"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"\'n Herselflaai word vereis om vryevormsteun te aktiveer."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"\'n Herselflaai word vereis om rekenaarmodus vir sekondêre skerms te verplig."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Herselflaai nou"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Herselflaai later"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Ruimtelike Oudio"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Oudio vanaf versoenbare media word meer meesleurend"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Kopnasporing"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Oudio verander wanneer jy jou kop beweeg om natuurliker te klink"</string>
