--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -3376,8 +3376,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Не е настроен – Служебен потребителски профил"</string>
     <string name="user_admin" msgid="4024553191395768119">"Администратор"</string>
     <string name="user_you" msgid="3070562015202859996">"Вие (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Не можете да добавите още потребители. За целта премахнете някой от съществуващите."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Само собственикът на таблета може да управлява потребителите."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Само собственикът на телефона може да управлява потребителите."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"В потребителските профили с ограничена функционалност не могат да се добавят профили"</string>
@@ -4403,11 +4402,10 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> неизползвани приложения</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> неизползвано приложение</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
+    <string name="unused_apps_category" msgid="8954930958175500851">"Настройки за неизползваните приложения"</string>
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
     <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
     <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"Всички приложения"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Инсталирани приложения"</string>
@@ -5550,6 +5548,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"Показване на контроли за външни устройства на заключения екран"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"Управление от заключено устройство"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"Управление на външни устройства без отключване на телефона или таблета ви, ако е разрешено от приложението за контроли за устройството"</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Показване на часовника с двойна линия, когато е налице"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Часовник с двойна линия"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5567,10 +5567,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Споделянето е безсрочно."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Разрешаване на екранни наслагвания в/у „Настройки“"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Разрешаване на приложенията, които могат да се показват върху други приложения, да се наслагват върху екрана на „Настройки“"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Разрешаване на услугата за мним модем"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Разрешете на това устройство да изпълнява услугата за мним модем с цел инструментално тестване. Не активирайте тази услуга при обичайно използване на телефона"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Мултимедия"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Фиксиране на медийния плейър"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"С цел бързо възобновяване на възпроизвеждането медийният плейър остава отворен в бързите настройки"</string>
@@ -5656,8 +5654,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Използване на функцията за фиксиране на приложение"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Използване на опциите за програмисти"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Използване на услуга за отпечатване"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Разрешаване на използването от няколко потребители"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Използване на безжичното отстраняване на грешки"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Използване на предпочитанията за графичния драйвер"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Използване на режима за запазване на батерията"</string>
@@ -5723,12 +5720,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Модификатори"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Действия (цена за извършване)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Действия (основна цена)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Награди за едно събитие"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Награди за времетраенето на събитието"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Максималният брой награди на ден"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Водеща активност"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Видяхте известие"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Видяхте известие в рамките на 15 минути"</string>
@@ -5759,20 +5753,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Визуализация"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Избиране на скрийнсейвър"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Показване на допълнителна информация"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Показване на часа, датата, времето, качеството на въздуха и подробностите за Cast на скрийнсейвъра"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Още настройки"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Избиране на скрийнсейвър"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Изберете какво да се показва на екрана, когато таблетът ви е свързан с докинг станция. Устройството ви може да изразходва повече енергия при използването на скрийнсейвър."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Персонализиране"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"За да се активира поддръжката в свободна форма, се изисква рестартиране."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"За да се зададе принудително настолният режим на алтернативни дисплеи, се изисква рестартиране."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Рестартиране сега"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Рестартиране по-късно"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Пространствено аудио"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Звукът от съвместимите източници става по-реалистичен"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Проследяване на движенията на главата"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Звукът се променя, докато движите главата си, с цел да бъде по-естествен"</string>
