--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -1905,8 +1905,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Άδειες ενημέρωσης συστήματος Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Όροι και προϋποθέσεις"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Άδεια συστήματος WebView"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"Πληροφορίες συντελεστών ταπετσαρίας"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Πηγές δορυφορικών εικόνων:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Εγχειρίδιο χρήσης"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Παρουσιάστηκε κάποιο πρόβλημα κατά τη φόρτωση του εγχειριδίου χρήσης."</string>
@@ -2057,8 +2056,7 @@
     <string name="enable_text" msgid="8570798764647110430">"Ενεργοποίηση"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Διαγραφή αποθηκευτικού χώρου"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Απεγκατάσταση ενημερώσεων"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"Επιτρέπονται περιορισμένες ρυθμίσεις"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Ορισμένες δραστηριότητες που έχετε επιλέξει ανοίγουν σε αυτήν την εφαρμογή από προεπιλογή."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Έχετε επιλέξει να επιτρέπεται σε αυτήν την εφαρμογή η δημιουργία γραφικών στοιχείων και η πρόσβαση στα δεδομένα τους."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Δεν έχουν οριστεί προεπιλογές."</string>
@@ -3374,8 +3372,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Δεν έχει ρυθμιστεί - Προφίλ εργασίας"</string>
     <string name="user_admin" msgid="4024553191395768119">"Διαχειριστής"</string>
     <string name="user_you" msgid="3070562015202859996">"Εσείς (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Δεν μπορείτε να προσθέσετε περισσότερους χρήστες. Καταργήστε έναν χρήστη για να προσθέσετε έναν νέο."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Μόνο ο κάτοχος του tablet μπορεί να διαχειριστεί χρήστες."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Μόνο ο κάτοχος του τηλεφώνου μπορεί να διαχειριστεί χρήστες."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Δεν είναι δυνατή η προσθήκη λογαριασμών από περιορισμένα προφίλ"</string>
@@ -4401,11 +4398,10 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> εφαρμογές που δεν χρησιμοποιούνται</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> εφαρμογή που δεν χρησιμοποιείται</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
+    <string name="unused_apps_category" msgid="8954930958175500851">"Ρυθμίσεις μη χρησιμοποιούμενων εφαρμογών"</string>
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
     <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
     <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"Όλες οι εφαρμογές"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Εγκατεστημένες εφαρμογές"</string>
@@ -5062,10 +5058,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Τη συσκευή διαχειρίζεται ο οργανισμός <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Μάθετε περισσότερα"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"Περιορισμένη ρύθμιση"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"Επιτρέπονται οι περιορισμένες ρυθμίσεις για <xliff:g id="APP_NAME">%s</xliff:g>"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Για την ασφάλειά σας, αυτή η ρύθμιση δεν είναι διαθέσιμη αυτήν τη στιγμή."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Πληροφορίες χρηματοδοτούμενης συσκευής"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Ο πωλητής συσκευών με πίστωση μπορεί να αλλάζει τις ρυθμίσεις και να εγκαθιστά λογισμικό σε αυτήν τη συσκευή.\n\nΕάν δεν καταβάλετε κάποια πληρωμή, η συσκευή σας θα κλειδωθεί.\n\nΓια να μάθετε περισσότερα, επικοινωνήστε με τον πωλητή συσκευών με πίστωση."</string>
@@ -5548,6 +5542,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"Εμφάνιση στοιχείων ελέγχου για εξωτερικές συσκευές από την οθόνη κλειδώματος"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"Έλεγχος από κλειδωμένη συσκευή"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"Ελέγξτε εξωτερικές συσκευές χωρίς να ξεκλειδώσετε το τηλέφωνο ή το tablet, εάν αυτό επιτρέπεται από την εφαρμογή στοιχείων ελέγχου της συσκευής"</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Εμφάνιση ρολογιού διπλής γραμμής όταν είναι διαθέσιμο"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Ρολόι διπλής γραμμής"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5565,10 +5561,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Η ενοικίαση δεν λήγει ποτέ."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Να επιτρέπονται οι επικαλ. οθόνης στις Ρυθμίσεις"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Να επιτρέπονται εφαρμογές που μπορούν να εμφανίζονται πάνω από άλλες εφαρμογές για επικάλυψη των οθονών ρυθμίσεων"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Επιτρέπεται η Προσομοίωση μόντεμ"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Να επιτρέπεται σε αυτήν τη συσκευή η εκτέλεση της υπηρεσίας Προσομοίωση μόντεμ για δοκιμή ενορχήστρωσης. Μην ενεργοποιείτε αυτήν την επιλογή κατά την κανονική χρήση του τηλεφώνου."</string>
     <string name="media_controls_title" msgid="403271085636252597">"Μέσα"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Καρφίτσωμα προγράμματος αναπαραγωγής μέσων"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Για γρήγορη συνέχιση της αναπαραγωγής, το πρόγραμμα αναπαραγωγής μέσων παραμένει ανοικτό στις Γρήγορες ρυθμίσεις"</string>
@@ -5654,8 +5648,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Χρήση καρφιτσώματος εφαρμογής"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Χρήση επιλογών για προγραμματιστές"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Χρήση υπηρεσίας εκτύπωσης"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Να επιτρέπονται πολλαπλοί χρήστες"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Χρήση ασύρματου εντοπισμού σφαλμάτων"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Χρήση προτιμήσεων προγράμματος οδήγησης γραφικών"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Χρησιμοποιήστε την Εξοικονόμηση μπαταρίας"</string>
@@ -5721,12 +5714,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Μεταβλητές"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Ενέργειες (Κόστος παραγωγής)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Ενέργειες (Βασική τιμή)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Επιβραβεύσεις ανά μεμονωμένο συμβάν"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Επιβραβεύσεις για συν. διάρκεια συμβάντων"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Μέγιστος αριθμός επιβραβεύσεων ανά ημέρα"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Κορυφαία δραστηριότητα"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Η ειδοποίηση προβλήθηκε"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Η ειδοποίηση προβλήθηκε εντός 15 λεπτών"</string>
@@ -5757,20 +5747,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Προεπισκόπηση"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Επιλογή προφύλαξης οθόνης"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Εμφάνιση πρόσθετων πληροφοριών"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Εμφάνιση ώρας, ημερομηνίας, καιρικών συνθηκών, ποιότητας αέρα και λεπτομερειών μετάδοσης στην προφύλαξη οθόνης"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Περισσότερες ρυθμίσεις"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Επιλογή προφύλαξης οθόνης"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Επιλέξτε τι θα εμφανίζεται στην οθόνη σας όταν το tablet είναι στη βάση σύνδεσης. Η συσκευή σας μπορεί να καταναλώνει περισσότερη ενέργεια όταν χρησιμοποιείται μια προφύλαξη οθόνης."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Προσαρμογή"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Απαιτείται επανεκκίνηση για την ενεργοποίηση της υποστήριξης ελεύθερης μορφής."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Απαιτείται επανεκκίνηση για την επιβολή χρήσης της λειτουργίας υπολογιστή σε δευτερεύουσες οθόνες."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Επανεκκίνηση τώρα"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Επανεκκίνηση αργότερα"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Χωρικός ήχος"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Ο ήχος από συμβατά μέσα γίνεται πιο καθηλωτικός"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Παρακολούθηση κίνησης κεφαλιού"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Ο ήχος αλλάζει καθώς κινείτε το κεφάλι σας προκειμένου να ακούγεται πιο φυσικός"</string>
