--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -4401,8 +4401,10 @@
       <item quantity="other">બિનવપરાયેલી <xliff:g id="COUNT_1">%d</xliff:g> ઍપ</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"ન વપરાયેલી ઍપના સેટિંગ"</string>
-    <string name="unused_apps_switch" msgid="2979882622987847195">"ઍપની પ્રવૃત્તિ થોભાવો"</string>
-    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"જો ઍપનો ઉપયોગ ન થતો હોય, તો પરવાનગીઓ કાઢી નાખો, હંગામી ફાઇલો ડિલીટ કરો અને નોટિફિકેશન બંધ કરો"</string>
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
+    <skip />
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
+    <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"બધી ઍપ"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"ઇન્સ્ટૉલ કરેલી ઍપ"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"ઝટપટ ઍપ્લિકેશનો"</string>
@@ -5544,6 +5546,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"બાહ્ય ડિવાઇસ માટેના નિયંત્રણો લૉક સ્ક્રીનમાંથી બતાવો"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"લૉક કરેલા ડિવાઇસમાંથી નિયંત્રણ કરો"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"ડિવાઇસ નિયંત્રણોની ઍપ દ્વારા મંજૂર કરેલું હોય તો તમારો ફોન અથવા ટૅબ્લેટ અનલૉક કર્યા વિના જ બાહ્ય ડિવાઇસનું નિયંત્રણ કરો"</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"ઉપલબ્ધ હોય ત્યારે ડબલ-લાઇન ઘડિયાળ બતાવો"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ડબલ-લાઇન ઘડિયાળ"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
