--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1905,8 +1905,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play システム アップデートのライセンス"</string>
     <string name="terms_title" msgid="2071742973672326073">"利用規約"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"システムのWebViewライセンス"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"壁紙のクレジット"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"航空写真の提供:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"マニュアル"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"マニュアルの読み込み中に問題が発生しました。"</string>
@@ -2057,8 +2056,7 @@
     <string name="enable_text" msgid="8570798764647110430">"有効にする"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"ストレージを消去"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"アップデートのアンインストール"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"制限付き設定の許可"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"デフォルトでは、選択した一部のアクティビティがこのアプリ内で開きます。"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"このアプリによるウィジェットの作成とデータへのアクセスを許可しました。"</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"設定されていません。"</string>
@@ -3374,8 +3372,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"セットアップしていません - 仕事用プロファイル"</string>
     <string name="user_admin" msgid="4024553191395768119">"管理者"</string>
     <string name="user_you" msgid="3070562015202859996">"自分（<xliff:g id="NAME">%s</xliff:g>）"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"これ以上ユーザーを追加できません。新しいユーザーを追加するには、いずれかのユーザーを削除してください。"</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"ユーザーを管理できるのはタブレットの所有者のみです。"</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"ユーザーを管理できるのはモバイルデバイスの所有者のみです。"</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"制限付きプロファイルではアカウントを追加できません"</string>
@@ -4401,11 +4398,10 @@
       <item quantity="other">使用されていないアプリ: <xliff:g id="COUNT_1">%d</xliff:g> 個</item>
       <item quantity="one">使用されていないアプリ: <xliff:g id="COUNT_0">%d</xliff:g> 個</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
+    <string name="unused_apps_category" msgid="8954930958175500851">"使用されていないアプリの設定"</string>
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
     <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
     <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"すべてのアプリ"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"インストール済みアプリ"</string>
@@ -5062,10 +5058,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"このデバイスは <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> により管理されています。"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"詳細"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"制限付き設定"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"<xliff:g id="APP_NAME">%s</xliff:g> の制限付き設定を許可しました"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"セキュリティ保護のため、この設定は現在利用できません。"</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"ローンで購入したデバイスの情報"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"クレジット プロバイダは、このデバイスの設定を変更したり、このデバイスにソフトウェアをインストールしたりできます。\n\nお支払いいただかないと、デバイスはロックされます。\n\n詳しくは、クレジット プロバイダにお問い合わせください。"</string>
@@ -5548,6 +5542,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"ロック画面から外部デバイスのコントロールを表示できます"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"ロックされたデバイスから操作する"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"デバイス コントロール アプリで許可されていれば、スマートフォンやタブレットのロックを解除しなくても外部デバイスを操作できます"</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"使用可能な場合はダブルライン時計を表示します"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ダブルライン時計"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5565,10 +5561,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"リースの有効期限はありません。"</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"設定での画面オーバーレイを許可する"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"他のアプリの上に重ねて表示して設定画面をオーバーレイすることをアプリに許可します"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Mock Modem の許可"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"インストルメンテーション テストで Mock Modem サービスを実行することをこのデバイスに許可します。スマートフォンの通常の使用中はこの設定を有効にしないでください"</string>
     <string name="media_controls_title" msgid="403271085636252597">"メディア"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"メディア プレーヤーを固定する"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"再生をすばやく再開するには、[クイック設定] でメディア プレーヤーを開いたままにしてください"</string>
@@ -5654,8 +5648,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"アプリ固定機能を使用"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"開発者向けオプションの使用"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"印刷サービスの使用"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"複数のユーザーの許可"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"ワイヤレス デバッグの使用"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"グラフィックス ドライバの設定の使用"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"バッテリー セーバーの使用"</string>
@@ -5721,12 +5714,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"修飾子"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"アクション（実施費用）"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"アクション（基本価格）"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"1 つのイベントあたりの特典"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"イベント期間全体の特典"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"1 日あたりの特典数の上限"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"上位のアクティビティ"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"表示された通知"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"15 分以内に表示された通知"</string>
@@ -5757,20 +5747,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"プレビュー"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"スクリーン セーバーの選択"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"その他の情報の表示"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"時間、日付、天気情報、大気質、キャストの詳細をスクリーン セーバーに表示します"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"その他の設定"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"スクリーン セーバーの選択"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"タブレットが装着されているときに画面に表示するものを選択してください。スクリーン セーバーを使用すると、デバイスの電力使用量が増えることがあります。"</string>
     <string name="customize_button_title" msgid="1110284655990203359">"カスタマイズ"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"フリーフォームのサポートを有効にするには、再起動が必要です。"</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"セカンダリ ディスプレイをデスクトップ モードに強制的に切り替えるには、再起動が必要です。"</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"今すぐ再起動する"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"後で再起動する"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"空間オーディオ"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"対応するメディアのより臨場感あふれる音声をお楽しみいただけます"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"ヘッド トラッキング"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"より自然なサウンドになるよう頭の動きに合わせて音声が変化します"</string>
