--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -3374,8 +3374,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"មិន​បាន​រៀបចំ - ប្រវត្តិរូប​ការងារ"</string>
     <string name="user_admin" msgid="4024553191395768119">"អ្នកគ្រប់គ្រង"</string>
     <string name="user_you" msgid="3070562015202859996">"អ្នក (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"អ្នកមិនអាចបញ្ចូលអ្នកប្រើប្រាស់បន្ថែមទៀតទេ។ សូមដកអ្នកប្រើប្រាស់ណាម្នាក់ចេញ ដើម្បីបញ្ចូលអ្នកប្រើប្រាស់ថ្មី។"</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"មាន​តែ​ម្ចាស់​កុំព្យូទ័រ​បន្ទះ​ប៉ុណ្ណោះ​អាច​គ្រប់គ្រង​អ្នកប្រើ"</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"មាន​តែ​ម្ចាស់​ទូរស័ព្ទ​ប៉ុណ្ណោះ​អាច​គ្រប់គ្រង​អ្នកប្រើ។"</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"ប្រវត្តិរូប​បាន​ដាក់កម្រិត​មិន​អាច​បន្ថែម​គណនី"</string>
@@ -4401,11 +4400,10 @@
       <item quantity="other">កម្មវិធី​ដែលមិនប្រើ​ចំនួន <xliff:g id="COUNT_1">%d</xliff:g></item>
       <item quantity="one">កម្មវិធី​ដែលមិនប្រើ​ចំនួន <xliff:g id="COUNT_0">%d</xliff:g></item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
+    <string name="unused_apps_category" msgid="8954930958175500851">"ការកំណត់កម្មវិធីដែលមិនប្រើ"</string>
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
     <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
     <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"កម្មវិធីទាំងអស់"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"កម្មវិធី​ដែល​បាន​ដំឡើង"</string>
@@ -5548,6 +5546,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"បង្ហាញការគ្រប់គ្រងសម្រាប់ឧបករណ៍ខាងក្រៅពីអេក្រង់ចាក់សោ"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"គ្រប់គ្រងពី​ឧបករណ៍ជាប់សោ"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"គ្រប់គ្រង​ឧបករណ៍ខាងក្រៅ​ដោយមិន​ដោះសោ​ទូរសព្ទ ឬថេប្លេត​របស់អ្នក ប្រសិនបើ​អនុញ្ញាតដោយ​កម្មវិធី​ផ្ទាំងគ្រប់គ្រងឧបករណ៍"</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"បង្ហាញ​នាឡិកា​ពីរជួរ នៅពេល​ដែលមាន"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"នាឡិកា​ពីរជួរ"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5565,10 +5565,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"ភតិសន្យា​មិនផុតកំណត់ទេ។"</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"អនុញ្ញាត​ការត្រួតគ្នាលើ​អេក្រង់នៅលើ​ការកំណត់"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"អនុញ្ញាតឱ្យ​កម្មវិធីដែលអាច​បង្ហាញនៅលើកម្មវិធី​ផ្សេងទៀត​ដាក់អេក្រង់ការកំណត់​ត្រួតគ្នា"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"អនុញ្ញាតម៉ូដឹមសាកល្បង"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"អនុញ្ញាតឱ្យឧបករណ៍នេះដំណើរការសេវាកម្មម៉ូដឹមសាកល្បង សម្រាប់ការធ្វើតេស្តឧបករណ៍។ កុំអនុញ្ញាតដូច្នេះក្នុងអំឡុងពេលប្រើប្រាស់ទូរសព្ទជាធម្មតា"</string>
     <string name="media_controls_title" msgid="403271085636252597">"មេឌៀ"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"ខ្ទាស់​កម្មវិធីចាក់មេឌៀ"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"ដើម្បីបន្ត​ការចាក់​បានរហ័ស កម្មវិធី​ចាក់មេឌៀ​បន្តបើក​នៅក្នុង​ការកំណត់រហ័ស"</string>
@@ -5654,8 +5652,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"ប្រើការខ្ទាស់កម្មវិធី"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ប្រើ​ជម្រើសសម្រាប់អ្នកអភិវឌ្ឍន៍"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"ប្រើសេវាកម្ម​បោះពុម្ព"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"អនុញ្ញាតអ្នកប្រើប្រាស់ច្រើន"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"ប្រើ​ការជួសជុលដោយឥតខ្សែ"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"ប្រើចំណូលចិត្ត​ដ្រាយវើ​ក្រាហ្វិក"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"ប្រើ​មុខងារ​សន្សំថ្ម"</string>
@@ -5721,12 +5718,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"ឧបករណ៍កែសម្រួល"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"សកម្មភាព (ថ្លៃផលិត)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"សកម្មភាព (តម្លៃគោល)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"រង្វាន់សម្រាប់ព្រឹត្តិការណ៍តែមួយ"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"រង្វាន់សម្រាប់រយៈពេលសរុបនៃព្រឹត្តិការណ៍"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"រង្វាន់ជាអតិបរមាក្នុងមួយថ្ងៃ"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"សកម្មភាព​​លើ​គេ"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"បានឃើញការ​ជូនដំណឹង"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"បានឃើញការ​ជូនដំណឹងក្នុងរយៈពេល 15 នាទី"</string>
@@ -5757,20 +5751,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"មើល​សាកល្បង"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"ជ្រើសរើសធាតុរក្សាអេក្រង់"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"បង្ហាញព័ត៌មានបន្ថែម"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"បង្ហាញព័ត៌មានលម្អិតអំពី Cast, ម៉ោង, កាលបរិច្ឆេទ, អាកាសធាតុ និងគុណភាពខ្យល់នៅលើធាតុរក្សាអេក្រង់"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"ការកំណត់ច្រើនទៀត"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"ជ្រើសរើសធាតុរក្សាអេក្រង់របស់អ្នក"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"ជ្រើសរើសអ្វីដែលអ្នកនឹងមើលឃើញនៅលើអេក្រង់របស់អ្នក នៅពេលភ្ជាប់ថេប្លេតរបស់អ្នក។ ឧបករណ៍របស់អ្នកអាចប្រើថាមពលកាន់តែច្រើន នៅពេលប្រើធាតុរក្សាអេក្រង់។"</string>
     <string name="customize_button_title" msgid="1110284655990203359">"ប្ដូរតាមបំណង"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"តម្រូវឱ្យចាប់ផ្ដើមឡើងវិញ ដើម្បីបើកជំនួយទម្រង់សេរី។"</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"តម្រូវឱ្យចាប់ផ្ដើមឡើងវិញ ដើម្បីបង្ខំមុខងារកុំព្យូទ័រនៅលើផ្ទាំងអេក្រង់បន្ទាប់បន្សំ។"</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"ចាប់ផ្ដើមឡើងវិញ​ឥឡូវនេះ"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"ចាប់​ផ្ដើម​ឡើង​វិញ​ពេល​ក្រោយ"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"សំឡេងលំហ"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"សំឡេងពីមេឌៀដែលត្រូវគ្នាកាន់តែធ្វើឱ្យជក់អារម្មណ៍"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"ការតាមដានក្បាល"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"សំឡេងប្រែប្រួល នៅពេលអ្នកធ្វើចលនាក្បាលរបស់អ្នក ដើម្បីធ្វើឱ្យសំឡេងកាន់តែដូចធម្មជាតិ"</string>
