--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -4401,8 +4401,10 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> ಬಳಕೆಯಾಗದ ಆ್ಯಪ್‌ಗಳು</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"ಬಳಕೆಯಾಗದಿರುವ ಆ್ಯಪ್ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</string>
-    <string name="unused_apps_switch" msgid="2979882622987847195">"ಆ್ಯಪ್‌ನ ಚಟುವಟಿಕೆಯನ್ನು ವಿರಾಮಗೊಳಿಸಿ"</string>
-    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"ಅನುಮತಿಗಳನ್ನು ತೆಗೆದುಹಾಕಿ, ತಾತ್ಕಾಲಿಕ ಫೈಲ್‌ಗಳನ್ನು ಅಳಿಸಿ ಮತ್ತು ಬಳಕೆಯಾಗಿರದಿದ್ದರೆ ಅಧಿಸೂಚನೆಗಳನ್ನು ನಿಲ್ಲಿಸಿ"</string>
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
+    <skip />
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
+    <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"ಎಲ್ಲಾ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"ಸ್ಥಾಪಿಸಲಾದ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"ಇನ್‌ಸ್ಟಂಟ್ ಆ್ಯಪ್‌ಗಳು"</string>
@@ -5544,6 +5546,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"ಲಾಕ್ ಸ್ಚ್ರೀನ್ ಮೂಲಕ ಬಾಹ್ಯ ಸಾಧನಗಳಿಗಾಗಿ ಕಂಟ್ರೋಲ್‌ಗಳನ್ನು ತೋರಿಸಿ"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"ಲಾಕ್ ಮಾಡಿದ ಸಾಧನದಿಂದ ನಿಯಂತ್ರಣ"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"ಸಾಧನ ನಿಯಂತ್ರಣಗಳ ಆ್ಯಪ್ ಅನುಮತಿಸಿದರೆ ನಿಮ್ಮ ಫೋನ್ ಅಥವಾ ಟ್ಯಾಬ್ಲೆಟ್ ಅನ್ನು ಅನ್‌ಲಾಕ್ ಮಾಡದೆಯೇ ಬಾಹ್ಯ ಸಾಧನಗಳನ್ನು ನಿಯಂತ್ರಿಸಿ"</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"ಲಭ್ಯವಿದ್ದಾಗ ಡಬಲ್ ಲೈನ್ ಗಡಿಯಾರವನ್ನು ತೋರಿಸಿ"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ಡಬಲ್ ಲೈನ್ ಗಡಿಯಾರ"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
