--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -3418,8 +3418,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Darba profils — nav iestatīts"</string>
     <string name="user_admin" msgid="4024553191395768119">"Administrators"</string>
     <string name="user_you" msgid="3070562015202859996">"Jūs (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Nevar pievienot vairāk lietotāju. Lai pievienotu jaunu lietotāju, noņemiet kādu no pašreizējiem."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Lietotājus var pārvaldīt tikai planšetdatora īpašnieks."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Lietotājus var pārvaldīt tikai tālruņa īpašnieks."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Ierobežoti profili nevar pievienot kontus."</string>
@@ -4464,11 +4463,10 @@
       <item quantity="one"><xliff:g id="COUNT_1">%d</xliff:g> neizmantota lietotne</item>
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> neizmantotas lietotnes</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
+    <string name="unused_apps_category" msgid="8954930958175500851">"Neizmantotās lietotnes iestatījumi"</string>
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
     <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
     <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"Visas lietotnes"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Instalētās lietotnes"</string>
@@ -5637,6 +5635,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"Bloķēšanas ekrānā rādīt ārējo ierīču vadīklas"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"Kontrole no bloķētas ierīces"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"Varat kontrolēt ārējās ierīces, neatbloķējot savu tālruni vai planšetdatoru, ja tas ir atļauts ierīču vadīklu lietotnē."</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Rādīt pulksteni divās rindās, ja tas ir pieejams"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Pulkstenis divās rindās"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5654,10 +5654,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Neierobežots nomas termiņš."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Atļaut ekrānu pārklāšanu iestatījumos"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Atļaut lietotnēm, ko var rādīt pāri citām lietotnēm, pārklāt iestatījumu ekrānus"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Atļaut modema imitāciju"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Atļaut šajā ierīcē izpildīt modema imitācijas pakalpojumu, lai veiktu instrumentācijas testu. Neiespējojiet šo atļauju parastas tālruņa lietošanas laikā."</string>
     <string name="media_controls_title" msgid="403271085636252597">"Multivide"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Piespraust multivides atskaņotāju"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Multivides atskaņotājs paliek atvērts sadaļā Ātrie iestatījumi, lai varētu ātri atsākt atskaņošanu"</string>
@@ -5743,8 +5741,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Izmantot lietotņu piespraušanu"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Izmantot izstrādātāju opcijas"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Izmantot drukāšanas pakalpojumu"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Atļaut vairākus lietotājus"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Izmantot bezvadu atkļūdošanu"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Izmantot grafikas draivera preferences"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Izmantot akumulatora enerģijas taupīšanas režīmu"</string>
@@ -5810,12 +5807,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Pārveidotāji"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Darbības (izveides cena)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Darbības (pamatcena)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Atlīdzības par vienu notikumu"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Atlīdzības par notikuma kopējo ilgumu"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Maksimālais atlīdzību skaits dienā"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Biežākā darbība"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Paziņojums redzēts"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Paziņojums redzēts 15 minūšu laikā"</string>
@@ -5846,20 +5840,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Priekšskatīt"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Izvēlieties ekrānsaudzētāju"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Rādīt papildu informāciju"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Ekrānsaudzētājā rādīt laiku, datumu un informāciju par laikapstākļiem, gaisa kvalitāti un apraidi"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Citi iestatījumi"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Ekrānsaudzētāja izvēle"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Izvēlieties, kas būs redzams ekrānā, kad planšetdators būs dokots. Ja izmantosiet ekrānsaudzētāju, ierīce var patērēt vairāk enerģijas."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Pielāgot"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Lai iespējotu brīvās formas atbalstu, nepieciešama atkārtota palaišana."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Lai piespiedu kārtā aktivizētu darbvirsmas režīmu sekundārajos displejos, nepieciešama atkārtota palaišana."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Atkārtoti palaist tūlīt"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Atkārtoti palaist vēlāk"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Telpiskais audio"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Audio no saderīga multivides satura kļūst iekļaujošāks"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Galvas izsekošana"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Kustinot galvu, audio mainīsies, lai izklausītos dabiskāk"</string>
