--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -3374,8 +3374,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"ସେଟ୍‌ ଅପ୍‌ ହୋଇନାହିଁ - କାର୍ଯ୍ୟ ପ୍ରୋଫାଇଲ୍‌"</string>
     <string name="user_admin" msgid="4024553191395768119">"ଆଡ୍‌ମିନ୍‌"</string>
     <string name="user_you" msgid="3070562015202859996">"ଆପଣ (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"ଆପଣ ଆଉ କୌଣସି ଉପଯୋଗକର୍ତ୍ତା ଯୋଗ କରିପାରିବେ ନାହିଁ। ଜଣେ ନୂଆ ଉପଯୋଗକର୍ତ୍ତା ଯୋଗ କରିବାକୁ ଜଣଙ୍କୁ କାଢ଼ି ଦିଅନ୍ତୁ।"</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"କେବଳ ଟାବ୍‌ଲେଟ୍‌ର ମାଲିକ ହିଁ ଉପଯୋଗକର୍ତ୍ତାଙ୍କ ପରିଚାଳନା କରିପାରିବେ।"</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"କେବଳ ଫୋନ୍‌ର ମାଲିକ ଉପଯୋଗକର୍ତ୍ତାଙ୍କୁ ପରିଚାଳନା କରିପାରିବେ।"</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"ପ୍ରତିବନ୍ଧିତ ପ୍ରୋଫାଇଲ୍‌ଗୁଡ଼ିକ ଆକାଉଣ୍ଟ ଆଡ୍‌ କରିପାରିବ ନାହିଁ"</string>
@@ -4401,11 +4400,10 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g>ଟି ଅବ୍ୟବହୃତ ଆପ୍</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g>ଟି ଅବ୍ୟବହୃତ ଆପ୍</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
+    <string name="unused_apps_category" msgid="8954930958175500851">"ଅବ୍ୟବହୃତ ଆପ ସେଟିଂସ"</string>
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
     <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
     <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"ସମସ୍ତ ଆପସ୍‌"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"ଇନ୍‌ଷ୍ଟଲ୍‌ ହୋଇଥିବା ଆପ୍‌ଗୁଡ଼ିକ"</string>
@@ -5548,6 +5546,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"ଲକ ସ୍କ୍ରିନରୁ ଏକ୍ସଟର୍ନଲ ଡିଭାଇସଗୁଡ଼ିକ ପାଇଁ ନିୟନ୍ତ୍ରଣଗୁଡ଼ିକୁ ଦେଖାନ୍ତୁ"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"ଲକ କରାଯାଇଥିବା ଡିଭାଇସରୁ ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"ଯଦି Device Controls ଆପ ଦ୍ୱାରା ଅନୁମତି ଦିଆଯାଏ, ତେବେ ଆପଣଙ୍କ ଫୋନ କିମ୍ବା ଟାବଲେଟକୁ ଅନଲକ ନକରି ଏକ୍ସଟର୍ନଲ ଡିଭାଇସଗୁଡ଼ିକୁ ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ"</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"ଉପଲବ୍ଧ ହେଲେ ଡବଲ-ଲାଇନ ଘଣ୍ଟା ଦେଖାନ୍ତୁ"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ଡବଲ-ଲାଇନ ଘଣ୍ଟା"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5565,10 +5565,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"ଲିଜର ମିଆଦ କେବେ ବି ଶେଷ ହେବ ନାହିଁ।"</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"ସେଟିଂସରେ ସ୍କ୍ରିନ ଓଭରଲେକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"ସେଟିଂସ ସ୍କ୍ରିନଗୁଡ଼ିକୁ ଓଭରଲେ କରିବାକୁ ସେହି ଆପ୍ସକୁ ଅନୁମତି ଦିଅନ୍ତୁ ଯାହା ଅନ୍ୟ ଆପ୍ସ ଉପରେ ଡିସପ୍ଲେ ହୋଇପାରିବ"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"ମକ ମୋଡେମକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"ଇନଷ୍ଟ୍ରୁମେଣ୍ଟେସନ ପରୀକ୍ଷା ପାଇଁ ମକ ମୋଡେମ ସେବା ଚଲାଇବା ନିମନ୍ତେ ଏହି ଡିଭାଇସକୁ ଅନୁମତି ଦିଅନ୍ତୁ। ଫୋନର ସାଧାରଣ ବ୍ୟବହାର ସମୟରେ ଏହାକୁ ସକ୍ଷମ କରନ୍ତୁ ନାହିଁ"</string>
     <string name="media_controls_title" msgid="403271085636252597">"ମିଡିଆ"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"ମିଡିଆ ପ୍ଲେୟାରରେ ପିନ୍ କରନ୍ତୁ"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"ଶୀଘ୍ର ପ୍ଲେବ୍ୟାକ ପୁଣି ଆରମ୍ଭ କରିବାକୁ କ୍ୱିକ୍ ସେଟିଂସରେ ମିଡିଆ ପ୍ଲେୟାର ଖୋଲା ରହିଥାଏ"</string>
@@ -5654,8 +5652,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"ଆପ୍ ପିନିଂ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ଡେଭଲପରଙ୍କ ପାଇଁ ବିକଳ୍ପଗୁଡ଼ିକୁ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"ପ୍ରିଣ୍ଟ ସେବା ବ୍ୟବହାର କରନ୍ତୁ"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"ଏକାଧିକ ଉପଯୋଗକର୍ତ୍ତାଙ୍କୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"ୱାୟାରଲେସ୍ ଡିବଗିଂ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"ଗ୍ରାଫିକ୍ସ ଡ୍ରାଇଭର୍ ପସନ୍ଦଗୁଡ଼ିକୁ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"ବ୍ୟାଟେରୀ ସେଭର୍ ବ୍ୟବହାର କରନ୍ତୁ"</string>
@@ -5721,12 +5718,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"ମୋଡିଫାୟରଗୁଡ଼ିକ"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"କାର୍ଯ୍ୟଗୁଡ଼ିକ (ତିଆରି କରିବା ପାଇଁ ଖର୍ଚ୍ଚ)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"କାର୍ଯ୍ୟଗୁଡ଼ିକ (ବେସ ମୂଲ୍ୟ)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ଗୋଟିଏ ଇଭେଣ୍ଟ ପ୍ରତି ପୁରସ୍କାର"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"ଇଭେଣ୍ଟର ମୋଟ ଅବଧି ପାଇଁ ପୁରସ୍କାର"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"ଦୈନିକ ସର୍ବାଧିକ ପୁରସ୍କାର"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"ଶ୍ରେଷ୍ଠ କାର୍ଯ୍ୟକଳାପ"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"ବିଜ୍ଞପ୍ତି ଦେଖାଯାଇଛି"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"ବିଜ୍ଞପ୍ତି 15 ମିନିଟ୍ ଭିତରେ ଦେଖାଯାଇଛି"</string>
@@ -5757,20 +5751,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"ପ୍ରିଭ୍ୟୁ କରନ୍ତୁ"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"ଏକ ସ୍କ୍ରିନ ସେଭର ବାଛନ୍ତୁ"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"ଅତିରିକ୍ତ ସୂଚନା ଦେଖାନ୍ତୁ"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"ସ୍କ୍ରିନ ସେଭରରେ ସମୟ, ତାରିଖ, ପାଣିପାଗ, ବାୟୁର ଗୁଣବତ୍ତା ଏବଂ କାଷ୍ଟ ବିବରଣୀ ଡିସପ୍ଲେ କରନ୍ତୁ"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"ଅଧିକ ସେଟିଂସ"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"ଆପଣଙ୍କ ସ୍କ୍ରିନ ସେଭର ବାଛନ୍ତୁ"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"ଆପଣଙ୍କ ଟାବଲେଟକୁ ଡକ କରାଯାଇଥିବା ସମୟରେ ଆପଣ ଆପଣଙ୍କ ସ୍କ୍ରିନରେ କଣ ଦେଖିବେ ତାହା ବାଛନ୍ତୁ। ଏକ ସ୍କ୍ରିନ ସେଭର ବ୍ୟବହାର କରାଯିବା ସମୟରେ ଆପଣଙ୍କ ଡିଭାଇସ ଅଧିକ ଏନର୍ଜି ବ୍ୟବହାର କରିପାରେ।"</string>
     <string name="customize_button_title" msgid="1110284655990203359">"କଷ୍ଟମାଇଜ କରନ୍ତୁ"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"ଫ୍ରିଫର୍ମ ସହାୟତାକୁ ସକ୍ଷମ କରିବା ପାଇଁ ଏକ ରିବୁଟ ଆବଶ୍ୟକ।"</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"ସେକେଣ୍ଡାରୀ ଡିସପ୍ଲେରେ ଡେସ୍କଟପ ମୋଡକୁ ବାଧ୍ୟତାମୂଳକ ଭାବେ ଚାଲୁ କରିବା ପାଇଁ ରିବୁଟ କରିବା ଆବଶ୍ୟକ।"</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"ବର୍ତ୍ତମାନ ରିବୁଟ କରନ୍ତୁ"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"ପରେ ରିବୁଟ କରନ୍ତୁ"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"ସ୍ପାସିଅଲ ଅଡିଓ"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"କମ୍ପାଟିବଲ ମିଡିଆରୁ ଆସିଥିବା ଅଡିଓ ଅଧିକ ଇମରସିଭ ହୋଇଥାଏ"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"ହେଡ ଟ୍ରାକିଂ"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"ସାଉଣ୍ଡକୁ ଅଧିକ ସ୍ୱାଭାବିକ କରିବା ପାଇଁ ଆପଣ ଆପଣଙ୍କ ମୁଣ୍ଡକୁ ମୁଭ କରିବା ସମୟରେ ଅଡିଓ ପରିବର୍ତ୍ତନ ହୁଏ"</string>
