--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -4464,8 +4464,10 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> апликација које се не користе</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"Подешавања некоришћених апликација"</string>
-    <string name="unused_apps_switch" msgid="2979882622987847195">"Паузирај активност апликације"</string>
-    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"Уклоните дозволе, избришите привремене фајлове и зауставите обавештења ако се не користе"</string>
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
+    <skip />
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
+    <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"Све апликације"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Инсталиране апликације"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Инстант апликације"</string>
@@ -5633,6 +5635,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"Прегледајте контроле за спољне уређаје на закључаном екрану"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"Контролишите са закључаног уређаја"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"Контролишите спољне уређаје без откључавања телефона или таблета ако то дозвољава апликација за контроле уређаја"</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Приказује дволинијски сат када је доступан"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Дволинијски сат"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
