--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -4403,9 +4403,9 @@
     </plurals>
     <!-- no translation found for unused_apps_category (8954930958175500851) -->
     <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
     <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
     <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"எல்லா ஆப்ஸ்களும்"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"நிறுவிய ஆப்ஸ்"</string>
@@ -5548,6 +5548,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"வெளிப்புறச் சாதனங்களுக்கான கண்ட்ரோல்களைப் பூட்டுத் திரையிலேயே காட்டலாம்"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"பூட்டப்பட்ட சாதனத்திலிருந்து கட்டுப்படுத்துதல்"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"சாதனக் கட்டுப்பாடுகள் ஆப்ஸ் அனுமதிக்கின்ற பட்சத்தில் உங்கள் மொபைல்/டேப்லெட்டை அன்லாக் செய்யாமலேயே வெளிப்புறச் சாதனங்களைக் கட்டுப்படுத்தலாம்"</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"இயக்கத்தில் இருக்கும்போது இரட்டை-வரிக் கடிகாரத்தைக் காட்டும்"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"இரட்டை-வரிக் கடிகாரம்"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
