--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -4403,9 +4403,9 @@
     </plurals>
     <!-- no translation found for unused_apps_category (8954930958175500851) -->
     <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
+    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
     <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
     <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"سبھی ایپس"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"انسٹال کردہ ایپس"</string>
@@ -5548,6 +5548,8 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"مقفل اسکرین سے بیرونی آلات کے لیے کنٹرولز دکھائیں"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"مقفل آلہ سے کنٹرول کریں"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"آلہ کے کنٹرولز ایپ کی اجازت ہونے پر اپنے فون یا ٹیبلیٹ کو غیر مقفل کیے بغیر خارجی آلات کو کنٹرول کریں"</string>
+    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
+    <skip />
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"دستیاب ہونے پر دو لائن والی گھڑی دکھائیں"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"دو لائن والی گھڑی"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
